syntax = "proto3";
package protobuf;

option go_package = "dc.uba.ar/this/search/protobuf";

// This is what will be exchanged between middlewares
message ApplicationMessageWithHeaders {
    string channel_id = 1;  // We'll use UUIDv4. It's a global ID shared by all participants
    
    // This is necessary because URLs don't univocally determine apps. There can be multiple applications
    // behind the same middleware (there is a 1:1 mapping between URLs and middlewares)
    string sender_id = 2;    // APP ID of the sending application
    string recipient_id = 3; // APP ID of the receiving application

    // TODO: how to avoid spoofing?

    MessageContent content = 4;

}


// This is what will be sent from an app to the middleware
message ApplicationMessageOut {
    string recipient = 1; // name of the recipient in the local contract
    MessageContent content = 2;
}

// This is what will be sent from the middleware to a local app
message ApplicationMessageIn {
    string sender = 1; // name of the sender in the local contract
    MessageContent content = 2;
}

// This is the message content that is sent by the app (this is copied as-is by the middlewares)
message MessageContent {
    bytes body = 1;
}